// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords collapsed with all options 1`] = `
<div
  id="groups-menu-filter"
>
  <GroupsMenuFilterBubble
    key="showInvalidated"
    name="showInvalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterBubble
    key="showBookmarks"
    name="showBookmarks"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterBubble
    key="showSelections"
    name="showSelections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterBubble
    key="showNoSelections"
    name="showNoSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterBubble
    key="showVerseEdits"
    name="showVerseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterBubble
    key="showComments"
    name="showComments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords collapsed with no options 1`] = `
<div
  id="groups-menu-filter"
/>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords expanded 1`] = `
<div
  id="groups-menu-filter"
>
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <InvalidatedIcon
        color="#fff"
        height={16}
        width={16}
      />
    }
    key="showInvalidated"
    name="showInvalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="bookmark"
      />
    }
    key="showBookmarks"
    name="showBookmarks"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ok"
      />
    }
    key="showSelections"
    name="showSelections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ban-circle"
      />
    }
    key="showNoSelections"
    name="showNoSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="pencil"
      />
    }
    key="showVerseEdits"
    name="showVerseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="comment"
      />
    }
    key="showComments"
    name="showComments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords expanded with 3 options checked 1`] = `
<div
  id="groups-menu-filter"
>
  <GroupsMenuFilterOption
    checked={false}
    disabled={false}
    icon={
      <InvalidatedIcon
        color="#fff"
        height={16}
        width={16}
      />
    }
    key="showInvalidated"
    name="showInvalidated"
    setFilter={[Function]}
    text="tools.invalidated"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="bookmark"
      />
    }
    key="showBookmarks"
    name="showBookmarks"
    setFilter={[Function]}
    text="tools.bookmarks"
  />
  <GroupsMenuFilterOption
    checked={false}
    disabled={true}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ok"
      />
    }
    key="showSelections"
    name="showSelections"
    setFilter={[Function]}
    text="tools.selected"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="ban-circle"
      />
    }
    key="showNoSelections"
    name="showNoSelections"
    setFilter={[Function]}
    text="tools.no_selection"
  />
  <GroupsMenuFilterOption
    checked={false}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="pencil"
      />
    }
    key="showVerseEdits"
    name="showVerseEdits"
    setFilter={[Function]}
    text="tools.verse_edit"
  />
  <GroupsMenuFilterOption
    checked={true}
    disabled={false}
    icon={
      <Glyphicon
        bsClass="glyphicon"
        glyph="comment"
      />
    }
    key="showComments"
    name="showComments"
    setFilter={[Function]}
    text="tools.comments"
  />
</div>
`;
